package project;

public class CarteCadeau extends Carte {
    public CarteCadeau(String numero) {
        super(numero);
    }

    @Override
    public boolean valider() {
        return super.valider();
    }
}
