package project;

public interface Composant {
    void setMediateur(Mediateur mediateur);

    String getNom();
}
