package project;

public enum OptionLivraison {
    LIVRAISON_MAIN_PROPRE, RENCONTRE_EXTERIEUR, LAISSER_PORTE
}
